[package]
name = "demo_21"
version = "0.1.0"
edition = "2021"

[lib]
name = "mylib"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
pretty_env_logger = "0.4"
winit = "0.28"
vulkanalia = { version = "=0.22.0", features = ["libloading", "provisional", "window"] }
log = "0.4"
thiserror = "1"
cgmath = "0.18"
png = "0.17"
tobj = { version = "3", features = ["log"] }